@@ -17,7 +17,8 @@ function checkSuccess($value,$success) {
 }
 
 	# instantiation
-	$con=sqlrcon_alloc($host,$port,$socket,$user,$password,0,1);
+	#$con=sqlrcon_alloc($host,$port,$socket,$user,$password,0,1);
+	$con=sqlrcon_alloc("localhost",8010,"","postgresqltest","postgresqltest",0,1);
 	$cur=sqlrcur_alloc($con);
 
 	echo("IDENTIFY: \n");
@@ -146,8 +147,8 @@ function checkSuccess($value,$success) {
 	checkSuccess(sqlrcur_getColumnType($cur,"testdate"),"date");
 	checkSuccess(sqlrcur_getColumnType($cur,7),"time");
 	checkSuccess(sqlrcur_getColumnType($cur,"testtime"),"time");
-	checkSuccess(sqlrcur_getColumnType($cur,8),"timestamptz");
-	checkSuccess(sqlrcur_getColumnType($cur,"testtimestamp"),"timestamptz");
+	checkSuccess(sqlrcur_getColumnType($cur,8),"timestamp");
+	checkSuccess(sqlrcur_getColumnType($cur,"testtimestamp"),"timestamp");
 	echo("\n");
 
 	echo("COLUMN LENGTH: \n");
@@ -627,9 +628,8 @@ function checkSuccess($value,$success) {
 	echo("\n");
 
 	echo("COMMIT AND ROLLBACK: \n");
-	$secondcon=sqlrcon_alloc($host,
-				$port, 
-				$socket,$user,$password,0,1);
+	#$secondcon=sqlrcon_alloc($host,$port,$socket,$user,$password,0,1);
+	$secondcon=sqlrcon_alloc("localhost",8010,"","postgresqltest","postgresqltest",0,1);
 	$secondcur=sqlrcur_alloc($secondcon);
 	checkSuccess(sqlrcur_sendQuery($secondcur,"select count(*) from testtable"),1);
 	checkSuccess(sqlrcur_getField($secondcur,0,0),"0");
