@@ -158,8 +158,8 @@ checkSuccess(cur.getColumnType(6),"date")
 checkSuccess(cur.getColumnType('testdate'),"date")
 checkSuccess(cur.getColumnType(7),"time")
 checkSuccess(cur.getColumnType('testtime'),"time")
-checkSuccess(cur.getColumnType(8),"timestamptz")
-checkSuccess(cur.getColumnType('testtimestamp'),"timestamptz")
+checkSuccess(cur.getColumnType(8),"timestamp")
+checkSuccess(cur.getColumnType('testtimestamp'),"timestamp")
 print "\n"
 
 print "COLUMN LENGTH: \n"
